syntax = "proto3";

package transaction;

option go_package = "./";

service CoordinatorService {
  rpc StartTransaction(TransactionRequest) returns (TransactionResponse);
}

service ParticipantService {
  rpc Prepare(TransactionRequest) returns (StatusResponse);
  rpc Commit(TransactionRequest) returns (StatusResponse);
  rpc Rollback(TransactionRequest) returns (StatusResponse);
}

message TransactionRequest {
  string transaction_id = 1;
  string data = 2; // Example data for the transaction
}

message TransactionResponse {
  string transaction_id = 1;
  string status = 2;
}

message StatusResponse {
  string status = 1; // "PREPARED", "COMMITTED", "ROLLED_BACK", "FAILED"
}